display vertical scrollbar by default to avoid layout "jumping"

--- a/src/cone/app/browser/static/styles.css
+++ b/src/cone/app/browser/static/styles.css
@@ -1,6 +1,7 @@
 /* general */
 body {
     padding-bottom:44px;
+    overflow-y:scroll;
 }
 
 /* main nav bar */
